# musiclove

./: .gitignore  CMakeLists.txt  Main.xm  Makefile  MusicLove.h  Tweak.xm  common.m  common.xm  control  musictools.xm  preftools.xm  tweakui.m
.theos/: last_package
.theos/_/DEBIAN/: control
Resources/: 5heart.psd  5star.psd
Support/: MusicLove.dylib
musiclove/: MLVRootListController.h  MLVRootListController.m  Makefile  MyAdditions.h  MyAdditions.m
musiclove.xcodeproj/: project.pbxproj
musiclove.xcodeproj/xcuserdata/brayden.xcuserdatad/xcschemes/: musiclove.xcscheme  xcschememanagement.plist
musiclove/Resources/: 5starIcon@3x.psd  Pro.plist  Root.plist
